# miwa

./: Cargo.toml  README.md  release-plz.toml
.github/workflows/: main.yaml  release-plz.yml
crates/miwa/: CHANGELOG.md  Cargo.toml
crates/miwa-core/: CHANGELOG.md  Cargo.toml
crates/miwa-core/src/: core.rs  lib.rs  system.rs
crates/miwa-core/src/core/: config.rs  container.rs  context.rs  dep.rs  error.rs  extension.rs  runtime.rs
crates/miwa-core/src/system/: config.rs  context.rs  error.rs  extension.rs  phase.rs
crates/miwa-macros/: Cargo.toml
crates/miwa-macros/src/: config.rs  extension.rs  injectable.rs  interface.rs  lib.rs  utils.rs
crates/miwa/src/: lib.rs
examples/basic/: Cargo.toml
examples/basic/examples/: simple.rs
