[workspace]
members = ["crates/*", "examples/*"]
resolver = "2"

[workspace.dependencies]
thiserror = "2.0"
async-trait = "0.1.68"
tracing = "0.1.37"
tokio = { version = "1.28.1", features = ["full"] }
anyhow = "1.0.71"
serde={version = "1", features= ["derive"]}
serde_json={version = "1"}
uuid= { version = "1", features=["v4"] }
