[package]
name = "miwa-core"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Miwa core"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miwa-macros = {  path = "../miwa-macros", version = "0.0.1" }
petgraph= "0.8.0"
config = "0.15.11"
async-trait = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
anyhow = {workspace = true}
tracing = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
uuid.workspace = true
