[package]
name = "miwa-macros"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Miwa macros"


[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20"
synstructure = "0.12"
attribute-derive = "0.6"
proc-macro-crate= "1.3"
