[package]
name = "miwa-macros"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Miwa macros"


[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.21"
synstructure = "0.13"
attribute-derive = "0.10"
proc-macro-crate= "3.3"
