[package]
name = "miwa_basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miwa = { path = "../../crates/miwa" }
tokio = {workspace = true}
async-trait = {workspace = true}
tracing-subscriber = "0.3.16"
